@@ -1,1 +1,1 @@
-Search.setIndex({envversion:42,terms:{represent:8,all:[],code:[0,1,5],dist:[],forget:1,thi:[1,2,3,5,7,8],supplement:8,chrissimpkin:[2,3],follow:[8,1,2,3,7],disk:1,consider:8,literari:8,content:[],lgpl:1,stateobject:[0,9],xpriorityqueu:0,xset:0,articl:8,under:8,aris:8,neglig:8,spec:5,merchant:8,sound:8,sourc:[0,1,2,3,5,9],everi:[8,0],string:[0,1,5,7],downstream:8,fals:0,creativecommon:8,wipo:8,veri:[],affect:8,syntax:[0,1,5,7],level:[0,1,2,3,5],cmd:0,list:[8,0],upload:1,correct:7,prepar:1,pleas:1,impli:8,cfg:[],direct:8,zero:0,cost:8,design:[8,0,5,9],pass:1,download:[],click:1,compat:8,index:1,sub:5,section:8,abl:1,brief:[],sui:8,current:[0,1],delet:[2,3],version:[],"new":[],method:[],full:[8,7],deriv:8,gener:[],never:8,unauthor:8,here:[0,1,5,7,8,9],disclaim:8,bdist_wininst:1,free:8,address:[],"_build_command_label":[],locat:[],along:[],dequ:0,modifi:[8,0,1,7],waiv:8,interpret:[8,0,1],search:1,technolog:8,later:[8,0],unenforc:8,prior:8,nosetest:1,permit:8,action:8,implement:[],commonli:[0,9],via:1,elect:8,circumv:8,win:[],modul:[0,1,5,7],moral:8,instal:[],txt:0,establish:5,unit:[0,1,5],from:[0,1,2,5,7,8],tar:[2,3],zip:[2,3],commun:8,doubl:[],upgrad:[],suit:[],doubt:8,overhead:[],scope:8,type:[],more:[0,1,7],sort:1,parliament:8,mozilla:1,benchmark:[],notic:8,herein:8,accept:8,examin:1,particular:8,known:8,herebi:8,must:[8,1],reproduct:8,account:1,alik:8,err:0,setup:[],work:[8,0,1],remain:8,minimum:8,can:[0,1,2,3,5,7,9],purpos:8,def:0,claim:8,prompt:[],quickstart:[],stream:[0,7],give:[],process:8,registr:1,share:8,remedi:8,templat:[],tag:0,want:3,alwai:8,multipl:[],goal:[0,1],strip_dir:[],sharealik:8,write:[0,1,7],how:8,sever:[8,1],place:[8,7],config:5,chri:8,resourc:8,stop:8,clone:[],after:[1,2,3],compulsori:8,befor:1,date:[8,0],end:5,law:8,data:[],"short":0,attempt:[1,5],practic:8,council:8,ani:[8,0,1,7],condit:8,author:8,correspond:[8,1],assign:[0,7],inform:[],"switch":0,environ:9,allow:[8,0,1,5,7],enter:[0,1],exclus:8,egg:0,order:5,furnish:8,elif:[0,7],help:[],endors:8,consent:8,offici:8,move:8,approv:8,soon:4,testscript:0,held:8,filewrit:0,through:[8,1,7],flexibl:[],myfil:0,entiti:8,fit:8,chosen:8,better:[],yaml:[],window:1,main:[],alter:8,them:[8,5],thei:7,handl:[0,1],safe:[5,2,3],dai:8,initi:[1,7],immun:8,now:8,xstring:0,nor:8,term:[8,9],name:[8,1,5,7],simpl:0,separ:8,getvalu:[],unicod:0,european:8,oblig:8,mean:8,compil:[0,1],societi:8,replac:[8,0,1],individu:8,expect:5,year:1,logo:8,differ:[8,1,5],extract:8,event:8,special:8,out:[8,0],variabl:7,publish:[8,7],stub:0,adapt:8,print:[0,7],ref:[],cwd:0,integr:8,navig:[1,2,3],million:0,patch_vers:7,argv:0,standard:[0,1,7],reason:8,base:8,theori:8,dictionari:0,releas:[1,7],org:[8,0],relat:8,bash:[],could:8,enforc:8,yum:0,retain:8,top:[1,2,3,5],first:[1,3],oper:[0,9],softwar:8,rang:[],directli:8,christoph:[1,7],independ:8,number:7,cmd2:0,restrict:8,mai:8,alreadi:[],submit:1,agre:8,open:6,primari:[1,7],gpl:1,tox:[],fair:8,script:[],associ:[8,5],licens:[],creator:8,system:[],messag:[1,5],run_j:0,cumul:[],statement:1,privaci:8,termin:8,scheme:8,offer:8,shell:0,option:[0,1,7],tool:[1,7],copi:8,specifi:[8,1],discover:8,broadcast:8,part:[8,0,7],pars:[1,7],rst:5,essenti:8,holder:8,than:8,sortbi:[],std:0,kind:8,provid:[8,0],remov:[8,5,7],tree:1,structur:[],project:[],reus:8,posit:0,arrang:8,provis:8,pre:[],runner:[0,1,5],py2:0,arg:0,defect:8,packag:1,manner:8,have:[8,1,2,3],reserv:8,need:[8,0,5],element:8,seek:8,sell:8,irrevoc:8,equival:8,violat:8,accuraci:8,note:7,also:[8,1,5],without:[],build:[],which:[8,0,5],concern:8,mit:[8,0,1,7],singl:[],even:8,begin:1,sure:7,unless:[8,1],distribut:[8,9,1,5],deploy:[1,7],previou:8,most:[8,1,2],sublicens:8,bsd:1,charg:8,hereaft:8,don:0,toolsh:[0,1,7,9],doc:[],adopt:8,request:[8,0,1,7],uri:8,doe:[8,0,1],anywher:8,trial:0,determin:0,treati:8,recipi:8,jurisdict:8,text:[],subprocess:0,connect:8,permiss:8,discoveri:8,absolut:8,print_stat:[],copyright:[8,1,7],categor:8,configur:[1,5],apach:1,written:8,should:[1,7],minor_vers:7,local:[1,2,3],over:1,generi:8,loss:8,contribut:8,get:[0,1],compatiblelicens:8,express:8,pypi:[0,1,2,5,7],compli:8,secondari:[1,7],cannot:8,report:0,liabl:8,u_txt:0,requir:[8,1],layout:[],organ:[1,5],artist:8,"public":8,whether:8,stuff:0,option_with_arg:0,common:[8,1],contain:[5,7],privileg:8,where:[],set:[],commandlin:0,sep:[],see:[1,3,5],mandatori:1,result:[8,1],respons:1,fail:8,close:8,subject:8,statu:[8,0,1],detect:1,reform:8,databas:8,someth:0,label:8,state:[],voluntari:8,between:0,"import":[8,0,1,5,7],timer_trials_benchmark:0,across:[],attribut:[8,0,9],accord:8,extend:0,numer:[9,7],dissemin:8,reinstat:8,incident:8,entir:1,extent:8,frozenset:0,pull:[2,3],come:4,popul:[1,5],run_rb:0,satisfi:8,protect:8,instant:[],extens:[],similar:8,howev:8,contract:8,licensor:8,polici:8,succeed:8,context:8,logic:[0,1,7,9],mani:1,com:[0,2,3],comment:0,markdown:5,simpli:[8,1,5],major_vers:7,technic:8,instanti:[0,9],non:[8,0],path:[0,1],guid:[],testapp:7,damag:8,liabil:8,becom:[1,5],xlist:0,tort:8,patch:7,trademark:8,been:8,github:[0,5,2,3],compon:0,whom:8,much:0,modif:8,addit:8,presenc:8,imag:8,rubi:0,consequenti:8,argument:[0,1,7],simpkin:[8,1,7],understand:8,repetit:0,those:[8,0],"case":[8,1,5],multi:7,look:7,amend:8,hyperlink:8,cprofil:[0,1],defin:[8,0],deem:8,abov:[8,0,7],error:8,argpars:[],increment:7,worldwid:8,readm:[],site:[1,5],infring:8,archiv:[2,3],substanti:8,lightweight:0,tediou:1,"__init__":5,decor:0,disabl:[],develop:[0,1,5,7,9],grant:8,perform:[8,1,5],parti:8,make:[],py33:1,same:[8,1],member:8,instanc:8,synch:8,advis:8,failur:[8,1],complet:[0,1,5],read_utf8:0,statutori:8,http:[0,2,3],assist:1,upon:8,effect:8,decompress:[2,3],sponsor:8,expressli:8,mofifi:[],user:[0,1,5,7],distutil:[1,5],chang:7,tune:4,built:[0,1],compendium:0,noninfring:8,task:1,lib:[],whole:8,well:8,person:8,exampl:[8,1,7],expens:8,is_py2:[],choos:5,undertaken:8,latest:2,identifi:1,execut:[],lawfulli:8,additon:[],paragraph:8,obtain:8,your_funct:0,speed:0,languag:[0,9],mandat:0,easi:[],autom:0,restructuredtext:5,except:8,identif:[],forbid:8,add:0,exercis:8,appli:8,els:0,save:[1,7],app:[1,5,7],match:1,royalti:8,march:8,around:7,format:[8,7],read:0,pstat:[0,1],insert:0,world:[8,0],xqueue:0,measur:8,like:[0,1,2,3,5,7],specif:[9,1],noth:8,collect:[8,0],benefit:8,necessari:[8,1],either:[],exemplari:8,page:5,fulfil:8,www:0,right:8,working_directori:0,who:0,deal:8,simplifi:[],creation:[],some:[],intern:8,sampl:0,proper:8,indirect:8,manifest:[],constitut:8,librari:[0,1,5,7,9],googl:0,insensit:1,confirm:[],avoid:8,shall:8,legal:8,exit:[0,7],newfil:0,reproduc:8,refer:[8,1],constru:8,object:[0,5,9],run:[0,1,2,3,5],usag:[],agreement:8,step:1,repositori:[1,2,3,5],output:7,post:0,impos:8,comparison:0,about:[1,7],patent:8,actual:5,would:[5,2,3],py27:1,materi:8,manag:0,commit:[],approxim:8,produc:8,block:[0,1,7],own:0,latent:8,within:8,bound:8,automat:[8,0,1,9],surviv:8,warranti:8,creativ:8,empti:5,your:[],naked_project_structur:[],merg:8,git:[],wai:[8,0],spam:0,transform:8,"long":[0,5],avail:[8,0,1],includ:[0,1,5,7,8,9],arg1:0,music:8,arg2:0,httpbin:0,media:8,medium:8,form:[8,0,1],write_utf8:0,altogeth:7,regard:8,fileread:0,punit:8,test_app:1,link:7,translat:8,"true":0,suppli:8,concaten:7,tripl:7,made:[8,7],utf:0,possibl:8,"default":[0,1,7],access:8,displai:[8,1,3,5,7],record:8,below:[8,1,7],limit:8,absenc:8,otherwis:8,waivabl:8,version_display_str:7,app_nam:7,gone:0,featur:[0,7],creat:[8,0,7,9],parser:[],deep:1,cure:8,exist:[],ini:1,file:[],ink:0,pip:[],curl:0,sort_stat:[],again:1,profil:[],quot:7,titl:8,when:[0,1,7],detail:[5,7],field:[],other:[8,0,5],rememb:1,varieti:0,test:[],you:[0,1,2,3,5,7,8],xdict:0,pseudonym:8,node:0,stat:[],repeat:5,intend:[1,7],stringio:[],notwithstand:8,recent:2,consid:8,stai:4,reduc:8,assert:8,receiv:[8,1],faster:0,directori:[],bdist_wheel:1,bottom:1,descript:[],portion:8,time:[8,0,1],push:[1,5],decemb:8,xfset:0,hello:0,waiver:8},objtypes:{},objnames:{},filenames:["index","executable","upgrade","installation","quickstart","naked_project_structure","change_log","help_usage_version","licenses","definitions"],titles:["Naked","Naked Executable","Upgrade Guide","Install Guide","Quickstart Guide","Naked Project Structure","Changelog","Help, Usage, and Version Commands","Licenses","Definitions"],objects:{},titleterms:{"function":0,all:1,set:[1,7],prompt:1,quickstart:4,execut:[0,1],text:[0,7],sdist:1,parser:0,readm:5,indic:[],upgrad:2,download:[2,3],structur:5,file:[0,1,5],tabl:[],pip:[2,3],dist:1,guid:[2,3,4],data:0,your:7,help:[1,7],content:0,tox:1,git:[2,3],locat:1,welcom:[],lib:5,confirm:[2,3],flexibl:0,make:1,definit:9,system:0,identif:1,yaml:1,state:0,version:7,build:1,regist:1,test:[0,1,5],"new":0,document:8,instal:3,unittest:1,wheel:1,applic:0,python:0,usag:[1,7],clone:[2,3],benchmark:0,nake:[8,0,1,5,7],framework:[8,0],templat:0,pytest:1,cfg:5,line:[0,1],win:1,"class":0,network:0,main:1,extens:0,directori:[1,5],type:[],setup:[1,5],changelog:6,descript:5,swheel:1,method:0,project:[0,1,5,7],inform:1,script:0,without:[],command:[0,1,7],nose:1,how:7,doc:5,gener:1,manifest:5,implement:7,profil:[0,1],where:1,licens:[8,1],commit:0}})
+Search.setIndex({envversion:42,terms:{represent:8,all:[],code:[0,1,5],dist:[],forget:1,is_py2:[],supplement:8,chrissimpkin:[2,3],follow:[8,1,2,3,7],disk:1,consider:8,literari:8,stub:0,lgpl:1,stateobject:[0,9],xset:0,articl:8,under:8,aris:8,neglig:8,spec:5,merchant:8,"case":[8,1,5],sourc:[0,1,2,3,5,9],everi:[8,0],string:[0,1,5,7],downstream:8,fals:0,multi:7,wipo:8,veri:[],affect:8,subprocess:0,level:[0,1,2,3,5],cmd:0,list:[8,0,6],upload:1,cwd:0,prepar:1,pleas:1,impli:8,cfg:[],direct:8,zero:0,cost:8,design:[8,0,5,9],pass:1,download:[],click:1,compat:8,index:1,sub:5,defin:[8,0],section:8,abl:1,brief:[],sui:8,current:[0,1,6],delet:[2,3],version:[],directori:[],"new":[],method:[],full:[8,7],deriv:8,gener:[],never:8,unauthor:8,here:[0,1,5,7,8,9],disclaim:8,bdist_wininst:1,argv:0,address:[],"_build_command_label":[],print_stat:[],along:[],standard:[0,1,7],modifi:[8,0,1,7],waiv:8,interpret:[8,0,1],search:1,produc:8,technolog:8,unenforc:8,prior:8,nosetest:1,permit:8,action:8,implement:[],commonli:[0,9],via:1,elect:8,circumv:8,win:[],modul:[0,1,5,7],moral:8,instal:[],txt:0,establish:5,unit:[0,1,5],from:[0,1,2,5,7,8],tar:[2,3],zip:[2,3],commun:8,doubl:[],upgrad:[],devlog:6,doubt:8,overhead:[],scope:8,type:[],more:[0,1,7],sort:1,parliament:8,mozilla:1,benchmark:[],notic:8,site:[1,5],write_utf8:0,accept:8,examin:1,particular:8,known:8,herebi:8,must:[8,1],reproduct:8,account:1,alik:8,err:0,setup:[],work:[8,0,1],remain:8,minimum:8,can:[0,1,2,3,5,7,9],purpos:8,def:0,claim:8,prompt:[],quickstart:[],stream:[0,7],give:[],process:8,registr:1,share:8,generi:8,templat:[],tag:0,want:3,alwai:8,multipl:[],goal:[0,1],strip_dir:[],sharealik:8,write:[0,1,7],how:8,"__init__":5,yum:0,simpl:0,chri:8,updat:6,resourc:8,pypi:[0,1,2,5,7],clone:[],after:[1,2,3],compulsori:8,befor:1,mai:8,end:5,law:8,associ:[8,5],"short":0,essenti:8,practic:8,council:8,grant:8,correspond:[8,1],element:8,inform:[],"switch":0,environ:9,allow:[8,0,1,5,7],enter:[0,1],exclus:8,egg:0,order:5,furnish:8,elif:[0,7],help:[],endors:8,consent:8,offici:8,move:8,approv:8,soon:[6,4],testscript:0,top:[1,2,3,5],held:8,filewrit:0,through:[8,6,1,7],flexibl:[],myfil:0,entiti:8,fit:8,chosen:8,better:[],yaml:[],window:1,main:[],alter:8,them:[8,5],thei:7,handl:[0,1],safe:[5,2,3],dai:8,initi:[1,7],now:8,xstring:0,nor:8,term:[8,9],name:[8,1,5,7],creativ:8,config:5,separ:8,getvalu:[],unicod:0,complet:[0,1,5,6],oblig:8,mean:8,compil:[0,1],societi:8,replac:[8,0,1],individu:8,newfil:0,expect:5,year:1,logo:8,differ:[8,1,5],extract:8,event:8,special:8,out:[8,0],variabl:7,publish:[8,7],content:[],adapt:8,rel:6,print:[0,7],ref:[],correct:7,common:[8,1],navig:[1,2,3],million:0,patch_vers:7,free:8,dequ:0,reason:8,base:[8,6],theori:8,dictionari:0,releas:[1,7],org:[8,0],decompress:[2,3],bash:[],argument:[0,1,7],could:8,keep:6,enforc:8,place:[8,7],retain:8,assign:[0,7],first:[1,3],oper:[0,9],softwar:8,rang:[],directli:8,christoph:[1,7],independ:8,number:7,cmd2:0,restrict:8,date:[8,0],alreadi:[],"long":[0,5],lib:[],agre:8,open:6,primari:[1,7],gpl:1,tox:[],commandlin:0,script:[],data:[],licens:[],sep:[],system:[],messag:[1,5],run_j:0,cumul:[],statement:1,privaci:8,termin:8,scheme:8,shell:0,option:[0,1,7],tool:[1,7],copi:8,specifi:[8,1],discover:8,broadcast:8,part:[8,0,7],pars:[1,7],rst:5,attempt:[1,5],holder:8,than:8,std:0,kind:8,provid:[8,0],remov:[8,5,7],tree:1,structur:[],project:[],reus:8,posit:0,arrang:8,provis:8,pre:[],runner:[0,1,5],version_display_str:7,py2:0,respons:1,defect:8,packag:1,manner:8,have:[8,1,2,3],close:8,need:[8,0,5],seek:8,sell:8,irrevoc:8,equival:8,violat:8,accuraci:8,note:7,also:[8,1,5],exampl:[8,1,7],build:[],which:[8,0,5],subject:8,mit:[8,0,1,7],singl:[],even:8,begin:1,sure:7,unless:[8,1],distribut:[8,9,1,5],deploy:[1,7],previou:8,most:[8,1,2],sublicens:8,phase:6,charg:8,hereaft:8,don:0,toolsh:[0,1,7,9],doc:[],adopt:8,request:[8,0,1,7],uri:8,doe:[8,0,1],trial:0,determin:0,treati:8,recipi:8,jurisdict:8,text:[],syntax:[0,1,5,7],permiss:8,label:8,absolut:8,locat:[],copyright:[8,1,7],"true":0,configur:[1,5],apach:1,state:[],should:[1,7],minor_vers:7,local:[1,2,3],over:1,remedi:8,contribut:8,get:[0,1],compatiblelicens:8,express:8,stop:8,compli:8,secondari:[1,7],cannot:8,report:0,liabl:8,u_txt:0,requir:[8,1],layout:[],organ:[1,5],artist:8,"public":8,"default":[0,1,7],stuff:0,option_with_arg:0,integr:8,contain:[5,7],privileg:8,where:[],set:[],fair:8,creator:8,see:[1,3,5],mandatori:1,result:[8,1],arg:0,fail:8,reserv:8,best:6,concern:8,statu:[8,0,1],detect:1,reform:8,databas:8,someth:0,discoveri:8,written:8,voluntari:8,between:0,"import":[8,0,1,5,7],timer_trials_benchmark:0,across:[],attribut:[8,0,9],accord:8,extend:0,numer:[9,7],reinstat:8,incident:8,entir:1,extent:8,frozenset:0,come:4,popul:[1,5],run_rb:0,satisfi:8,protect:8,instant:[],extens:[],similar:8,howev:8,contract:8,polici:8,succeed:8,context:8,logic:[0,1,7,9],mani:1,app_nam:7,com:[0,2,3,6],comment:0,markdown:5,simpli:[8,1,5],major_vers:7,technic:8,instanti:[0,9],featur:[0,7],non:[8,0],path:[0,1],guid:[],testapp:7,damag:8,liabil:8,becom:[1,5],xlist:0,tort:8,patch:7,trademark:8,been:8,github:[0,5,2,3],compon:0,whom:8,much:0,modif:8,addit:8,presenc:8,imag:8,rubi:0,consequenti:8,ani:[8,0,1,7],simpkin:[8,1,7],understand:8,repetit:0,those:[8,0],sound:8,creativecommon:8,look:7,amend:8,hyperlink:8,cprofil:[0,1],pace:6,cure:8,abov:[8,0,7],error:8,argpars:[],increment:7,worldwid:8,readm:[],herein:8,infring:8,archiv:[2,3],substanti:8,lightweight:0,tediou:1,sever:[8,1],around:7,decor:0,develop:[0,1,5,6,7,9],author:8,perform:[8,1,5],parti:8,make:[],format:[8,7],py33:1,same:[8,1],member:8,instanc:8,synch:8,failur:[8,1],european:8,read_utf8:0,statutori:8,http:[0,2,3,6],assist:1,upon:8,effect:8,xpriorityqueu:0,sponsor:8,expressli:8,mofifi:[],user:[0,1,5,7],distutil:[1,5],chang:[6,7],tune:4,built:[0,1],compendium:0,noninfring:8,task:1,sortbi:[],whole:8,well:8,object:[0,5,9],person:8,without:[],expens:8,thi:[1,2,3,5,6,7,8],choos:5,undertaken:8,latest:2,identifi:1,execut:[],lawfulli:8,additon:[],paragraph:8,obtain:8,your_funct:0,speed:0,languag:[0,9],mandat:0,rapid:6,easi:[],autom:0,restructuredtext:5,except:8,identif:[],forbid:8,add:0,exercis:8,appli:8,els:0,save:[1,7],app:[1,5,7],match:1,royalti:8,march:8,advis:8,measur:8,read:0,pstat:[0,1],insert:0,world:[8,0],xqueue:0,loss:8,like:[0,1,2,3,5,7],specif:[9,1],noth:8,collect:[8,0],benefit:8,necessari:[8,1],either:[],exemplari:8,page:[6,5],fulfil:8,www:0,right:8,working_directori:0,who:0,deal:8,simplifi:[],creation:[],some:[],intern:8,repeat:5,sampl:0,proper:8,indirect:8,manifest:[],constitut:8,librari:[0,1,5,7,9],insensit:1,confirm:[],avoid:8,shall:8,legal:8,xfset:0,concaten:7,exit:[0,7],condit:8,reproduc:8,refer:[8,1],constru:8,immun:8,run:[0,1,2,3,5],usag:[],agreement:8,step:1,arg1:0,repositori:[1,2,3,5],output:7,post:0,impos:8,stage:6,comparison:0,about:[1,7],patent:8,actual:5,would:[5,2,3],py27:1,materi:8,manag:0,commit:[],approxim:8,disabl:[],block:[0,1,7],own:0,latent:8,within:8,bound:8,automat:[8,0,1,9],surviv:8,warranti:8,bsd:1,empti:5,your:[],naked_project_structur:[],merg:8,git:[],log:6,wai:[8,0,6],spam:0,transform:8,submit:1,avail:[8,0,1,6],includ:[0,1,5,7,8,9],suit:[],music:8,arg2:0,httpbin:0,media:8,medium:8,form:[8,0,1],offer:8,altogeth:7,regard:8,fileread:0,punit:8,test_app:1,link:7,translat:8,categor:8,suppli:8,pull:[2,3],tripl:7,made:[8,7],utf:0,possibl:8,whether:8,access:8,displai:[8,1,3,5,7],record:8,below:[8,1,7],limit:8,absenc:8,otherwis:8,waivabl:8,dissemin:8,connect:8,gone:0,later:[8,0],quot:7,creat:[8,0,7,9],parser:[],deep:1,deem:8,exist:[],ini:1,file:[],ink:0,pip:[],curl:0,sort_stat:[],again:1,profil:[],googl:0,titl:8,when:[0,1,7],detail:[5,7],field:[],other:[8,0,5],rememb:1,varieti:0,test:[],you:[0,1,2,3,5,7,8],xdict:0,pseudonym:8,node:0,stat:[],relat:8,intend:[1,7],stringio:[],notwithstand:8,recent:2,consid:8,stai:4,reduc:8,assert:8,receiv:[8,1],faster:0,anywher:8,bdist_wheel:1,bottom:1,descript:[],portion:8,time:[8,0,1],push:[1,5],decemb:8,licensor:8,hello:0,waiver:8},objtypes:{},objnames:{},filenames:["index","executable","upgrade","installation","quickstart","naked_project_structure","change_log","help_usage_version","licenses","definitions"],titles:["Naked","Naked Executable","Upgrade Guide","Install Guide","Quickstart Guide","Naked Project Structure","Changelog","Help, Usage, and Version Commands","Licenses","Definitions"],objects:{},titleterms:{wheel:1,all:1,set:[1,7],prompt:1,quickstart:4,execut:[0,1],text:[0,7],sdist:1,parser:0,readm:5,indic:[],system:0,download:[2,3],swheel:1,file:[0,1,5],tabl:[],pip:[2,3],dist:1,guid:[2,3,4],your:7,help:[1,7],identif:1,tox:1,git:[2,3],locat:1,welcom:[],lib:5,confirm:[2,3],flexibl:0,make:1,definit:9,upgrad:2,content:0,yaml:1,state:0,version:7,build:1,regist:1,test:[0,1,5],"new":0,win:1,document:8,instal:3,unittest:1,"function":0,applic:0,python:0,benchmark:0,clone:[2,3],usag:[1,7],nake:[8,0,1,5,7],framework:[8,0],templat:0,pytest:1,cfg:5,line:[0,1],data:0,"class":0,network:0,main:1,extens:0,directori:[1,5],type:[],setup:[1,5],changelog:6,descript:5,structur:5,method:0,project:[0,1,5,7],inform:1,script:0,without:[],command:[0,1,7],nose:1,how:7,doc:5,gener:1,manifest:5,implement:7,profil:[0,1],where:1,licens:[8,1],commit:0}})
