@@ -1,4 +1,8 @@
 Changelog
 ===========
 
+The best way to keep up with the relatively rapid pace of updates at this stage is through the developer log that is available at `http://devlog.naked-py.com <http://devlog.naked-py.com>`_.
+
+As soon as the current testing phase is complete, this page will list version based changes.
+
 version 0.1.x : open testing versions
